# jwekke-ai-cli

./: Cargo.toml  readme.md
.zed/: debug.json
src/: client.rs  config.rs  file.rs  loading.rs  logger.rs  main.rs  models.rs  stream.rs  ui.rs
