[package]
name = "jwekke-ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sse = "0.2.0"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
