[package]
name = "jwekke-ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
