[package]
name = "jwekke-ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = {version = "0.9.1"}
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
simd-json = "0.17.0"
